k8s/platform/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # WICHTIG: Wir sagen Traefik, dass das Backend HTTPS spricht
    traefik.ingress.kubernetes.io/service.serversscheme: https
    # Wir sagen Traefik: "Egal ob das Zertifikat von ArgoCD selbstgebastelt ist, akzeptiere es."
    traefik.ingress.kubernetes.io/service.noverifyssl: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80   # <--- Wir gehen wieder auf den sicheren Port!
  tls:
  - hosts:
    - argocd.local
